--- a/docs/course/020es6.md
+++ b/docs/course/020es6.md
@@ -1,9 +1,14 @@
 ---
 title: ES6知识
+order: 30
 group:
   title: 教程
   path: /course
-  order: 20
+  order: 6
+nav:
+  title: 教程
+  path: /course
+  order: 6
 ---
 
 # ES6 知识
